--- a/appsettings.json
+++ b/appsettings.json
@@ -14,5 +14,16 @@
     "Prefix": "Kumbara-",
     "MainKey": "Serhend"
   },
+  "Sentry": {
+    "Dsn": "https://7902b3d32ea74d69b01ce2cca09718aa@o1075208.ingest.us.sentry.io/4505425967710208",
+    "SendDefaultPii": true,
+    "MaxRequestBodySize": "Always",
+    "MinimumBreadcrumbLevel": "Debug",
+    "MinimumEventLevel": "Warning",
+    "AttachStackTrace": true,
+    "Debug": true,
+    "DiagnosticLevel": "Error",
+    "TracesSampleRate": 1.0
+  },
   "AllowedHosts": "*"
 }
